crates/toml/tests/snapshots/invalid/string/bad-slash-escape.stderr
TOML parse error at line 1, column 42
  |
1 | invalid-escape = "This string has a bad \/ escape character."
  |                                          ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
